# MegaExp-LPR

./: .gitignore  crpd.yml  dataloader.py  detection.py  main.py  manifest.py  pyproject.toml  recognition.py  train.py  training.py  utils.py
