[project]
name = "lpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jaxtyping>=0.3.2",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.0",
    "ultralytics>=8.3.146",
    "flashlight-text"
]

[tool.uv.sources]
torch = { index = "pytorch", marker = "'microsoft' in platform_release"}

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cu128"